# STM32_CMake_Template

./: .gitignore  LICENSE  README.md
Firmware/: CMakeLists.txt  build.sh  toolchain_STM32.cmake
Firmware/Application/: CMakeLists.txt
Firmware/Application/Inc/Display/: ssd1306.h  ssd1306_io.h
Firmware/Application/Inc/Graphics/: graphics.h  graphics_fonts.h  graphics_types.h
Firmware/Application/Src/: main.c
Firmware/Application/Src/Display/: ssd1306.c  ssd1306_io.c
Firmware/Application/Src/Graphics/: graphics.c  graphics_fonts.c
Firmware/Application/Src/STM32/: stm32f3xx_hal_msp.c
Firmware/Drivers/: CMakeLists.txt
Firmware/Drivers/CMSIS/: CMakeLists.txt
Firmware/Drivers/STM32F3xx_HAL/: CMakeLists.txt
Firmware/Linker/: STM32_debug.ld
