## Project ----------------------------------------------------------------------------- #
cmake_minimum_required (VERSION 3.10)
project (STM32_Drivers)

## Include submodules ------------------------------------------------------------------ #
add_subdirectory(CMSIS)
add_subdirectory(STM32F3xx_HAL)